syntax = "proto3";
import "namespace_meta.proto";

option java_multiple_files = true;
option java_package = "org.polypheny.db.protointerface.proto";
option java_outer_classname = "Meta";

package polypheny.protointerface;

message DbmsVersionRequest{
}

message DbmsVersionResponse{
  string dbms_name = 1;
  string version_name = 2;
  int32 major_version = 3;
  int32 minor_version = 4;
}

message LanguageRequest {}

message LanguageResponse {
  repeated string language_names = 1;
}

message TablesRequest{
  optional string namespace_pattern = 1;
  optional string table_pattern = 2;
  repeated string table_types = 3;
}

message TablesResponse {
  repeated Table tables = 1;
}


message ColumnsRequest {
  optional string namespace_pattern = 1;
  optional string table_pattern = 2;
  optional string column_pattern = 3;
}

message ColumnsResponse {
  repeated Column columns = 1;
}


message DatabasesRequest {
}

message DatabasesResponse {
  repeated Database databases = 1;
}

message Database {
  string database_name = 1;
  string owner_name = 2;
  string default_namespace_name = 3;
}

message TableTypesRequest {

}

message TableTypesResponse {
  repeated TableType table_types = 1;
}

message TableType {
  string table_type = 1;
}

message PrimaryKeysRequest {
  optional string namespace_pattern = 1;
  string table_pattern = 2;
}

message PrimaryKeysResponse {
  repeated PrimaryKey primary_keys = 1;
}



message ImportedKeysRequest {
  optional string namespace_pattern = 1;
  string table_pattern = 2;
}

message ImportedKeysResponse {
  repeated ForeignKey imported_keys = 1;
}


message ExportedKeysRequest {
  optional string namespace_pattern = 1;
  string table_pattern = 2;
}

message ExportedKeysResponse {
  repeated ForeignKey exported_keys = 1;
}

message TypesRequest {

}

message TypesResponse {
  repeated Type types = 1;
}

message Type {
  string type_name = 1;
  int32 precision = 2;
  optional string literal_prefix = 3;
  optional string literal_suffix = 4;
  bool is_case_sensitive = 5;
  int32 is_searchable = 6;
  bool is_auto_increment = 7;
  int32 min_scale = 8;
  int32 max_scale = 9;
  int32 radix = 10;
}

message IndexesRequest {
  optional string namespace_pattern = 1;
  optional string table_pattern = 2;
  bool unique = 3;
}

message IndexesResponse{
  repeated Index indexes = 1;
}


message SqlStringFunctionsRequest {
}

message SqlSystemFunctionsRequest {
}

message SqlTimeDateFunctionsRequest {
}

message SqlNumericFunctionsRequest {
}

message SqlKeywordsRequest {
}

message MetaStringResponse{
  string string = 1;
}

message ProceduresRequest {
  string language = 1;
  optional string namespace_pattern = 2;
  optional string procedure_pattern = 3;
}

message ProceduresResponse {
  repeated Procedure procedures = 1;
}

message Procedure {
  string trivial_name = 1;
  string input_parameters = 2;
  string description = 3;
  ReturnType return_type = 4;
  string unique_name = 5;

  enum ReturnType {
    UNSPECIFIED = 0;
    UNKNOWN = 1;
    NO_RESULT = 2;
    RESULT = 3;
  }
}

message ProcedureColumnsRequest {
  string language = 1;
  optional string namespace_pattern = 2;
  optional string procedure_pattern = 3;
  optional string column_pattern= 4;
}

message ProcedureColumnsResponse {
  repeated ProcedureColumn procedure_columns = 1;
}

message ProcedureColumn {

}


